# CFS

./: .gitignore  CMakeLists.txt  Makefile  README.md  cfs.c  cfs.h
.github/workflows/: ci.yml  test.yml
include/: cfs.h  cfsapi.h  cfscsv.h
src/: cfs.c  cfsapi.c  cfscsv.c  cfsdebug.c  cfstocsv.c
tests/: CMakeLists.txt  GetVarDesc.c  GetVarVal.c  get_file_variable.c  open_close_cfsfile.c  test.h  test_read_cfs_file.c  test_read_file_channel_header.c  test_read_general_header.c
